--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -65,6 +65,7 @@
 
 </main>
 
+<button id="btnBdePublic" class="btn-floating btn-bde-public" aria-label="App BDE">🎉</button>
 <button id="logout" class="btn-logout-floating">🚪</button>
 
 <script>
