--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../public/style.css">
+  <link rel="stylesheet" href="../admin/style.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <!-- Icons -->
