--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -66,7 +66,8 @@
 </main>
 
 <button id="btnBdePublic" class="btn-floating btn-bde-public" aria-label="App BDE">🎉</button>
-<button id="logout" class="btn-logout-floating">🚪</button>
+<button id="logout" class="btn-floating btn-logout-floating">🚪</button>
+
 
 <script>
 /* ===============================
